infra/k8s/category-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category-depl
spec:
  selector:
    matchLabels:
      app: category-depl
  template:
    metadata:
      labels:
        app: category-depl
    spec:
      containers:
      - name: category-depl
        image: akira2002/micro-sells-category
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: category-service
spec:
  selector:
    app: category-depl
  ports:
  - port: 8080
    targetPort: 8080
