infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: microsells.dev
      http:
        paths:
          - path: /api/v1/category/?(.*)
            pathType: Prefix
            backend:
              service:
                name: category-service
                port:
                  number: 8080
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-srv
                port:
                  number: 9090
